--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -95,3 +95,43 @@ nav a:hover {
     background-color: #222;
     color: #fff;
 }
+
+section {
+    display: flex;
+    padding: 32px 24px;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+}
+
+section.odd {
+    background-color: #c2c2c2;
+}
+
+.banner {
+    width: 60%;
+}
+
+.banner-text {
+    text-align: left;
+    font-size: 1.2rem;
+    width: 35%;
+    color: #333;
+}
+
+.start {
+    width: 100%;
+    background-color: #333;
+    text-align: center;
+    padding: 8px 0;
+}
+
+.start:hover {
+    background-color: #555;
+}
+
+.start a {
+    color: #fff;
+    width: 100%;
+    display: block;
+}
