--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,6 +101,10 @@ nav a:hover, footer a:hover{
     color: #fff;
 }
 
+.nav-mobile {
+    display: none;
+}
+
 section {
     display: flex;
     padding: 32px 24px;
@@ -250,4 +254,30 @@ footer {
 footer a {
     color: #222;
     transition: background-color 0.3s;
+}
+
+/* Responsive Design */
+
+@media screen and (max-width: 960px) {
+    .logo {
+        display: none;
+    }
+
+    .logo-text {
+        display: none;
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    .nav-desktop {
+        display: none;
+    }
+
+    .nav-mobile {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+    }
 }
